# digibok

./: Dockerfile  README.md  app.py  app.yaml  book_ids.txt  clean.py  iver.csv  nbno.py  pyproject.toml  reqs.csv  requirement.txt  requirements.txt  setup_streamlit.py
.streamlit/: config.toml
corpus/: Dockerfile copy  README.md  app.py  download_books.sh  pyproject.toml  requirements.txt
corpus/tests/: test_corpus.py
